# openapi-image-gen

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURATION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: main.py
app/api/routes/: edit.py  generate.py  health.py  models.py
app/core/: config.py  security.py
app/schemas/: requests.py  responses.py
app/services/: gemini_service.py  litellm_service.py  model_registry.py  openai_service.py  storage_service.py
app/utils/: sse.py
tests/: conftest.py  test_edit.py  test_generate.py  test_health.py  test_litellm_service.py  test_model_registry.py  test_openwebui.py  test_sse_streaming.py  test_storage_service.py
